Edited wiki page through web user interface.

--- a/wiki/Index.wiki
+++ b/wiki/Index.wiki
@@ -6,5 +6,5 @@ Juego basado en el mundo de Gaea World. Cooperativo de hasta 4 personas, rpg
 
 = Estructura =
 
-* MainCamera - Script de la camara principal
-.* Movimiento - Script para el movimiento.
+* MainCamera - Script de la camara principal.
+* Movimiento - Script para el movimiento.
